<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Android Dashboard!</string>
    <string name="about">aboutContent</string>
    <string name="app_name">SensoSaur</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="aboutdesc">aboutdesc</string>
    <string name="settingsdesc">settingsdesc</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="Magnetometer">Magnetometer</string>
    <string name="Gyroscope">Gyroscope</string>
    <string name="Light">Light</string>
    <string name="Temperature">Temperature</string>
    <string name="Pressure">Pressure</string>
    <string name="RotationVector">RotationVector</string>
    <string name="Linear_Acceleration">Linear_Acceleration</string>
    <string name="Sound_Level">Sound_Level</string>
    <string name="Orientation">Orientation</string>
    <string name="Proximity">Proximity</string>
    <string name="Gravity">Gravity</string>
    <string name="Start_Logging">Start_Logging</string>
    <string name="Stop_Logging">Stop_Logging</string>
    <string name="rvdesc">rvdesc</string>
    <string name="proxdesc">proxdesc</string>
    <string name="tempdesc">tempdesc</string>
    <string name="ladesc">ladesc</string>
    <string name="prdesc">prdesc</string>
    <string name="ordesc">ordesc</string>
    <string name="infodesc">infodesc</string>
    <string name="greydesc">greydesc</string>
    <string name="Logging">Logging</string>
    <string name="LOGGING">LOGGING</string>
    <string name="START">START</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="Dist">Dist</string>
    <string name="Illum">Illum</string>
    <string name="Temp">Temp</string>
    <string name="Pr">Pr</string>
    <string name="dB">dB</string>
    <string name="g">g</string>
    <string name="About_SensoSaur">About_SensoSaur</string>
    <string name="LogDATA">LogDATA</string>
    <string name="Tick">Tick</string>
    <string name="Wifi_GPS_NW">Wifi_GPS_NW</string>
    <string name="Call_State">Call_State</string>
    <string name="GSM_Cinr">GSM_Cinr</string>
    <string name="Wifi_State">Wifi_State</string>
    <string name="AP_Connected">AP_Connected</string>
    <string name="AP_Con">AP_Con</string>
    <string name="AP_RSSI">AP_RSSI</string>
    <string name="AP_Best">AP_Best</string>
    <string name="log_data_str">LOG DATA ::</string>
    <string name="Log_Data">Log Data :</string>
	<string name="Comments">Comments :</string>
	<string name="Rating">Rating :</string>
	<string name="SubmitComments">Submit</string>
	<string name="Corner">Corner</string>
	<string name="Door">Door</string>
	<string name="logon">Log On</string>
</resources>